# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  cli.py  converter_json.py  converter_yaml.py  difference.py  formater.py  help.py  json_parser.py  parser.py  parsing.py  yaml_parser.py
gendiff/formaters/: __init__.py  formater_json.py  formater_plain.py  formater_stylish.py
gendiff/scripts/: gendiff.py
tests/: __init__.py  test_gendiff_init.py
tests/fixtures/: file1_nested.yml  file2.yml  file2_nested.yml
